--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ verdant_version=0.1.2
 # More Optional Dependencies
 adorn_version=5.0.1
 amendments_version=1.2.18
-hex_casting_version=0.11.2
+hex_casting_version=0.11.2-pre-715
 supplementaries_version=hcbfy5lf
 supplementaries_squared_version=1.1.18
 waystones_version=14.1.9
@@ -38,13 +38,16 @@ waystones_version=14.1.9
 kotlin_version=1.13.1+kotlin.2.1.10
 moonlight_version=2.13.58
 cca_version=5.2.3
-paucal_version=0.6.0
+paucal_version=0.6.0-pre-118
 cloth_config_version=11.1.136
 patchouli_version=84.1
 inline_version=1.0.2
 balm_version=7.3.11
 fiber_version=0.19.1-1
 fabricasm_version=v2.3
+entity_reach_version=2.3.0
+serialization_hooks_version=0.4.99999
+trinkets_version=3.7.2
 #serialization_hooks_version=0.4.27
 
 emi_version=1.1.19
