--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,10 @@ repositories {
 	maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.terraformersmc.com/releases/" }
 	maven { url "https://maven.blamejared.com/" }
+	maven {
+        name "KosmX's maven"
+        url 'https://maven.kosmx.dev/'
+    }
 }
 
 loom {
@@ -112,7 +116,9 @@ dependencies {
 	// Farmer's Delight (Refabricated) (canvas signs)
 	modCompileOnly("vectorwing:FarmersDelight:${project.minecraft_version}-${project.farmers_delight_version}+refabricated")
 	modLocalRuntime("vectorwing:FarmersDelight:${project.minecraft_version}-${project.farmers_delight_version}+refabricated")
-	// Hexical here
+	// Hexical (dye iotas, dyeing via casting)
+	modCompileOnly("maven.modrinth:hexical:${project.hexical_version}")
+	modLocalRuntime("maven.modrinth:hexical:${project.hexical_version}")
 	// Items Displayed [Fabric] (jewelry pillows)
 	modCompileOnly("maven.modrinth:items-displayed:${project.items_displayed_version}-${project.minecraft_version}")
 	modLocalRuntime("maven.modrinth:items-displayed:${project.items_displayed_version}-${project.minecraft_version}")
@@ -168,6 +174,8 @@ dependencies {
     modLocalRuntime("dev.emi:trinkets:${trinkets_version}")
 	modLocalRuntime("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}")
 	modLocalRuntime("com.samsthenerd.inline:inline-fabric:${project.minecraft_version}-${project.inline_version}")
+	modCompileOnly("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}+1.20")
+	modLocalRuntime("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}+1.20")
 	
 
 	// CLIENT-SIDE MODS FOR TESTING
