--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ farmers_delight_version=2.2.6
 items_displayed_version=1.3
 spelunkery_version=0.3.16
 verdant_version=0.1.2
+hexical_version=1.5.0
 # More Optional Dependencies
 adorn_version=5.0.1
 amendments_version=1.2.18
@@ -49,6 +50,7 @@ entity_reach_version=2.3.0
 serialization_hooks_version=0.4.99999
 trinkets_version=3.7.2
 #serialization_hooks_version=0.4.27
+player_anim_version=1.0.2-rc1
 
 emi_version=1.1.19
 jade_version=11.12.3
