--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,7 @@ amendments_version=1.2.18
 hex_casting_version=0.11.2-pre-715
 supplementaries_version=hcbfy5lf
 supplementaries_squared_version=1.1.18
-waystones_version=14.1.9
+waystones_version=uP3VU7si
 
 # Double Dependencies
 kotlin_version=1.13.1+kotlin.2.1.10
@@ -43,7 +43,7 @@ paucal_version=0.6.0-pre-118
 cloth_config_version=11.1.136
 patchouli_version=84.1
 inline_version=1.0.2
-balm_version=7.3.11
+balm_version=7.3.17
 fiber_version=0.19.1-1
 fabricasm_version=v2.3
 entity_reach_version=2.3.0
